# guilia-ai

./: .gitignore  README.md  chatbot.py  main.py  pyproject.toml
prompts/core/: boss_wrapper.txt  giulia_assistant.txt
utils/: __init__.py  logger.py
utils/ai/: __init__.py  history_manager.py  model_interface.py  model_provider.py  prompt_loader.py
utils/db/: __init__.py  credentials.py  factory.py  interface.py
utils/db/providers/: __init__.py  agile_e6_sql.py  cimdb_api.py
